--- a/ML_code/Fertilizer.ipynb
+++ b/ML_code/Fertilizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 3,
    "id": "869abc5a-d8f6-4280-8b72-2d7ff6f2c383",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 4,
    "id": "94b906b2-fbdf-47f9-ac83-a41b35e06632",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 5,
    "id": "f59ec83a-a9d2-4051-b9dd-a34dcb280aea",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "(205, 9)"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 6,
    "id": "f295d779-d7e6-469e-9f00-566152a17fef",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "4            0            Urea  "
       ]
      },
-     "execution_count": 429,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 7,
    "id": "bc27fe9d-4d38-4e05-94a8-c2cabb1392b1",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 8,
    "id": "77035703-5e23-405b-8c96-ad839d1a5a81",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "max      42.000000  "
       ]
      },
-     "execution_count": 433,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 9,
    "id": "ef4788b6-f9cd-4954-9c1d-0fc9373d8c2d",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 10,
    "id": "edb502c7-fa2c-46f1-bdd8-f2b14cd15057",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "(205, 9)"
       ]
      },
-     "execution_count": 436,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 11,
    "id": "4e689aef-c9b2-48da-aa49-0c2d2d4f530e",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 439,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 12,
    "id": "f4af8dc7-23f9-45be-a5b5-1a45be52746c",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 13,
    "id": "fe5c9a15-d176-4b57-b016-cee3235f88d8",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 14,
    "id": "0f94c00d-1112-4ffb-9b21-9b8358ce3297",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 444,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 15,
    "id": "63e27626-8f83-4177-8d09-2d0aa04877d7",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 16,
    "id": "cef22282-23c9-4be5-b27e-dde6b623b6da",
    "metadata": {
     "scrolled": true
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 18,
    "id": "b3eb932a-a84e-43d8-bd15-5ccbf36889de",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 19,
    "id": "348c87df-5233-4f77-a720-0a2ffdd0dafd",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 20,
    "id": "d0237fae-e719-470a-8520-9ee7508f3cc1",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 21,
    "id": "5767dd52-9981-4a8e-a195-9f21b2e42f33",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 22,
    "id": "34ec65e7-ad17-4555-b9d3-70a4902455c7",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
        "4            0            Urea  "
       ]
      },
-     "execution_count": 522,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 23,
    "id": "ce55fd46-d83a-4562-98d5-3363a2f1a716",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 24,
    "id": "37b97218-c1e7-4db7-83a2-519d5f802a87",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 25,
    "id": "ad43eb3c-10fe-42ed-8471-46ce372236f7",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 26,
    "id": "7035f18d-970b-46db-a296-b9fd280c132b",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 27,
    "id": "643c3c90-fa70-44ba-9ec2-8f70ac0df399",
    "metadata": {},
    "outputs": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 41,
    "id": "94983e1e-0bce-48c7-97cf-edb4a58b3e2e",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
     "input_data = np.array([[15, 0, 24, 5, 1, 11 ]])\n",
     "\n",
     "# Make prediction using the hybrid model\n",
-    "prediction = gb_model.predict(input_data)\n",
+    "prediction = hybrid_model.predict(input_data)\n",
     "\n",
     "# Print the suggested fertilizer for the given conditions\n",
     "print(\"The suggested fertilizer for the given conditions is:\", prediction)"
@@ -1012,173 +1012,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
-   "id": "ad9e3c51-3444-4d89-af9b-048074fa7937",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Temparature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Moisture</th>\n",
-       "      <th>Soil Type</th>\n",
-       "      <th>Crop Type</th>\n",
-       "      <th>Nitrogen</th>\n",
-       "      <th>Potassium</th>\n",
-       "      <th>Phosphorous</th>\n",
-       "      <th>Fertilizer Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>26</td>\n",
-       "      <td>52</td>\n",
-       "      <td>38</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>Maize</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Urea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29</td>\n",
-       "      <td>52</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Loamy</td>\n",
-       "      <td>Sugarcane</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>DAP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34</td>\n",
-       "      <td>65</td>\n",
-       "      <td>62</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Cotton</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>14-35-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32</td>\n",
-       "      <td>62</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Tobacco</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>28-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28</td>\n",
-       "      <td>54</td>\n",
-       "      <td>46</td>\n",
-       "      <td>Clayey</td>\n",
-       "      <td>Paddy</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Urea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>26</td>\n",
-       "      <td>52</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>Barley</td>\n",
-       "      <td>12</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>17-17-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>25</td>\n",
-       "      <td>50</td>\n",
-       "      <td>64</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Cotton</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>20-20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Temparature  Humidity   Moisture Soil Type  Crop Type  Nitrogen  Potassium  \\\n",
-       "0           26         52        38     Sandy      Maize        37          0   \n",
-       "1           29         52        45     Loamy  Sugarcane        12          0   \n",
-       "2           34         65        62     Black     Cotton         7          9   \n",
-       "3           32         62        34       Red    Tobacco        22          0   \n",
-       "4           28         54        46    Clayey      Paddy        35          0   \n",
-       "5           26         52        35     Sandy     Barley        12         10   \n",
-       "6           25         50        64       Red     Cotton         9          0   \n",
-       "\n",
-       "   Phosphorous Fertilizer Name  \n",
-       "0            0            Urea  \n",
-       "1           36             DAP  \n",
-       "2           30        14-35-14  \n",
-       "3           20           28-28  \n",
-       "4            0            Urea  \n",
-       "5           13        17-17-17  \n",
-       "6           10           20-20  "
-      ]
-     },
-     "execution_count": 531,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "29a0a066-ba0f-4903-864e-85710f74b2da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Assuming `hybrid_model` is trained and ready for saving\n",
+    "with open('hybrid_model_fertilizer.pkl', 'wb') as file:\n",
+    "    pickle.dump(hybrid_model, file)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "d8eda8a1-cf4c-4262-bc24-ae859e69c356",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The suggested fertilizer for the given conditions is: ['20-20']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the model\n",
+    "with open('hybrid_model_fertilizer.pkl', 'rb') as file:\n",
+    "    loaded_hybrid_model = pickle.load(file)\n",
+    "\n",
+    "# Example input for prediction\n",
+    "import numpy as np\n",
+    "input_data = np.array([[15, 0, 24, 5, 1, 11]])\n",
+    "\n",
+    "# Make prediction using the loaded model\n",
+    "prediction = loaded_hybrid_model.predict(input_data)\n",
+    "\n",
+    "# Print the suggested fertilizer for the given conditions\n",
+    "print(\"The suggested fertilizer for the given conditions is:\", prediction)\n"
+   ]
   },
   {
    "cell_type": "code",
